--- a/APP/IOS/PointExchange/PointExchange/Base.lproj/HomePage.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Base.lproj/HomePage.storyboard
@@ -877,41 +877,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7dm-Hw-wWn">
-                                <rect key="frame" x="127" y="85" width="120" height="120"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7dm-Hw-wWn">
+                                <rect key="frame" x="112" y="83.5" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="7dm-Hw-wWn" secondAttribute="height" id="dT1-5o-qFl"/>
+                                </constraints>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入会员卡号" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="enb-72-gal" userLabel="账户">
-                                <rect key="frame" x="48" y="304" width="279" height="58"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入会员卡号" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="enb-72-gal" userLabel="卡号">
+                                <rect key="frame" x="65.5" y="304" width="244" height="50.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="enb-72-gal" secondAttribute="height" multiplier="279:58" id="Vju-17-b2g"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入会员卡密码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="oiR-vV-iQY" userLabel="账户">
-                                <rect key="frame" x="48" y="370" width="279" height="58"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入会员卡密码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="oiR-vV-iQY" userLabel="密码">
+                                <rect key="frame" x="65.5" y="362.5" width="244" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="oiR-vV-iQY" secondAttribute="height" multiplier="279:58" id="EFl-Xf-QIH"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DTN-WY-YrE">
-                                <rect key="frame" x="48" y="470" width="279" height="58"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="addCardButton"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DTN-WY-YrE">
+                                <rect key="frame" x="48" y="449.5" width="279" height="58"/>
+                                <state key="normal" image="addCardButton"/>
                                 <connections>
                                     <action selector="clickButton:" destination="hTW-hA-cUw" eventType="touchUpInside" id="FZk-wK-VGm"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="------" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Duy-BD-ARq">
-                                <rect key="frame" x="132" y="240" width="111" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="------" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Duy-BD-ARq">
+                                <rect key="frame" x="154" y="258" width="67" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="textColor" red="0.25098039215686274" green="0.24705882352941178" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="oiR-vV-iQY" firstAttribute="width" secondItem="FXz-Gc-wbX" secondAttribute="width" multiplier="0.65" id="7vA-Z2-IhU"/>
+                            <constraint firstItem="enb-72-gal" firstAttribute="width" secondItem="FXz-Gc-wbX" secondAttribute="width" multiplier="0.65" id="8RN-xd-e6l"/>
+                            <constraint firstItem="DTN-WY-YrE" firstAttribute="centerX" secondItem="MlL-pv-cbA" secondAttribute="centerX" id="EBq-Ei-66d"/>
+                            <constraint firstItem="Duy-BD-ARq" firstAttribute="centerX" secondItem="MlL-pv-cbA" secondAttribute="centerX" id="EXj-H0-0kZ"/>
+                            <constraint firstItem="DTN-WY-YrE" firstAttribute="top" secondItem="oiR-vV-iQY" secondAttribute="bottom" constant="36" id="Maa-sS-hzA"/>
+                            <constraint firstItem="Duy-BD-ARq" firstAttribute="top" secondItem="7dm-Hw-wWn" secondAttribute="bottom" constant="24" id="OUO-Pk-hVg"/>
+                            <constraint firstItem="oiR-vV-iQY" firstAttribute="top" secondItem="enb-72-gal" secondAttribute="bottom" constant="8" id="QPf-rC-twV"/>
+                            <constraint firstItem="enb-72-gal" firstAttribute="top" secondItem="Duy-BD-ARq" secondAttribute="bottom" constant="16" id="Tfa-TC-Jdf"/>
+                            <constraint firstItem="7dm-Hw-wWn" firstAttribute="width" secondItem="FXz-Gc-wbX" secondAttribute="width" multiplier="0.4" id="Tz0-hQ-aLf"/>
+                            <constraint firstItem="enb-72-gal" firstAttribute="centerX" secondItem="MlL-pv-cbA" secondAttribute="centerX" id="cBN-PN-U4Z"/>
+                            <constraint firstItem="oiR-vV-iQY" firstAttribute="centerX" secondItem="MlL-pv-cbA" secondAttribute="centerX" id="eiF-8l-3BO"/>
+                            <constraint firstItem="7dm-Hw-wWn" firstAttribute="centerX" secondItem="MlL-pv-cbA" secondAttribute="centerX" id="jAf-Im-aBq"/>
+                            <constraint firstItem="7dm-Hw-wWn" firstAttribute="top" secondItem="MlL-pv-cbA" secondAttribute="centerY" multiplier="0.25" id="pXp-jE-mIK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="FXz-Gc-wbX"/>
                     </view>
                     <connections>
