--- a/APP/IOS/PointExchange/PointExchange/Discover.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Discover.storyboard
@@ -100,28 +100,6 @@
             </objects>
             <point key="canvasLocation" x="1973.5999999999999" y="-437.63118440779613"/>
         </scene>
-        <!--搜索结果-全部-->
-        <scene sceneID="Pm9-qU-42r">
-            <objects>
-                <viewController storyboardIdentifier="SearchResultAllViewController" title="搜索结果-全部" id="lAt-4a-Rj5" customClass="SearchResultAllViewController" customModule="PointExchange" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="RU6-bJ-4PN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YH9-qU-qfT">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="kFA-xG-HRb"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nAI-oj-NEf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1109.5999999999999" y="1019.640179910045"/>
-        </scene>
         <!--搜索结果-优惠券-->
         <scene sceneID="U1O-ho-MWe">
             <objects>
@@ -139,6 +117,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Bfk-H9-Em5"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="81L-87-9pV" id="E5f-6Q-sME"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2df-HU-1JX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -161,6 +142,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="JHC-TO-JLK"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="Wmh-Bi-pEE" id="gOl-9F-mCs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vcG-Dh-WeS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -659,6 +643,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="p5G-lJ-kQn"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="2oF-Oj-T6d" id="zCg-PQ-qxC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="za0-2y-fmM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
